# driving_car

./: README.md
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/lib/lane_detect/: lane_detect
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  lane_detect.pc  lane_following.pc  test_pkg.pc  video_image.pc  video_stream.pc
catkin_ws/devel/lib/video_stream/: video_stream
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
catkin_ws/devel/share/lane_detect/cmake/: lane_detectConfig.cmake
catkin_ws/devel/share/lane_following/cmake/: lane_followingConfig.cmake
catkin_ws/devel/share/test_pkg/cmake/: test_pkgConfig.cmake
catkin_ws/devel/share/video_image/cmake/: video_imageConfig.cmake
catkin_ws/devel/share/video_stream/cmake/: video_streamConfig.cmake
catkin_ws/src/lane_detect/: CMakeLists.txt
catkin_ws/src/lane_detect/include/: main.h
catkin_ws/src/lane_detect/src/: main.cpp
